// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveReport Handles environment being started 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "counter": undefined,
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "ready",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STARTING",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "name_type_index": undefined,
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "ready",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "tags_index": undefined,
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "counter": undefined,
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "ready",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STARTING",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "name_type_index": undefined,
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "tags_index": undefined,
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport Loads report skeleton when mounted 1`] = `[Function]`;

exports[`InteractiveReport Parially refreshes the report on update. 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "ready",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "ready",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "ready",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport Updates testcase state 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "hash": 44444,
                    "logs": Array [],
                    "name": "testcaseName",
                    "name_type_index": Set {
                      "testcaseName|testcase",
                      "SuiteName|testsuite",
                      "MultitestName|multitest",
                      "TestplanName|testplan",
                    },
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultitestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "running",
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "TestcaseUID",
                  },
                ],
                "entry_uids": Array [
                  "test_basic_assertions",
                ],
                "fix_spec_path": null,
                "hash": 33333,
                "name": "SuiteName",
                "name_type_index": Set {
                  "SuiteName|testsuite",
                  "MultitestName|multitest",
                  "TestplanName|testplan",
                  "testcaseName|testcase",
                },
                "parent_uids": Array [
                  "TestplanUID",
                  "MultitestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "running",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {},
                "uid": "SuiteUID",
              },
            ],
            "entry_uids": Array [
              "SuiteUID",
            ],
            "fix_spec_path": null,
            "hash": 22222,
            "name": "MultitestName",
            "name_type_index": Set {
              "MultitestName|multitest",
              "TestplanName|testplan",
              "SuiteName|testsuite",
              "testcaseName|testcase",
            },
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "running",
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {},
            "uid": "MultitestUID",
          },
        ],
        "entry_uids": Array [
          "MultitestUID",
        ],
        "hash": 11111,
        "meta": Object {},
        "name": "TestplanName",
        "name_type_index": Set {
          "TestplanName|testplan",
          "MultitestName|multitest",
          "SuiteName|testsuite",
          "testcaseName|testcase",
        },
        "parent_uids": Array [],
        "runtime_status": "running",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "hash": 44444,
                      "logs": Array [],
                      "name": "testcaseName",
                      "name_type_index": Set {
                        "testcaseName|testcase",
                        "SuiteName|testsuite",
                        "MultitestName|multitest",
                        "TestplanName|testplan",
                      },
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultitestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "running",
                      "status": "ready",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "tags_index": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "TestcaseUID",
                    },
                  ],
                  "entry_uids": Array [
                    "test_basic_assertions",
                  ],
                  "fix_spec_path": null,
                  "hash": 33333,
                  "name": "SuiteName",
                  "name_type_index": Set {
                    "SuiteName|testsuite",
                    "MultitestName|multitest",
                    "TestplanName|testplan",
                    "testcaseName|testcase",
                  },
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultitestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "running",
                  "status_override": null,
                  "tags": Object {},
                  "tags_index": Object {},
                  "timer": Object {},
                  "uid": "SuiteUID",
                },
              ],
              "entry_uids": Array [
                "SuiteUID",
              ],
              "fix_spec_path": null,
              "hash": 22222,
              "name": "MultitestName",
              "name_type_index": Set {
                "MultitestName|multitest",
                "TestplanName|testplan",
                "SuiteName|testsuite",
                "testcaseName|testcase",
              },
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "running",
              "status": "ready",
              "status_override": null,
              "tags": Object {},
              "tags_index": Object {},
              "timer": Object {},
              "uid": "MultitestUID",
            },
          ],
          "entry_uids": Array [
            "MultitestUID",
          ],
          "hash": 11111,
          "meta": Object {},
          "name": "TestplanName",
          "name_type_index": Set {
            "TestplanName|testplan",
            "MultitestName|multitest",
            "SuiteName|testsuite",
            "testcaseName|testcase",
          },
          "parent_uids": Array [],
          "runtime_status": "running",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport handles individual parametrizations being run 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "counter": undefined,
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "name_type_index": undefined,
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "running",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "tags_index": undefined,
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "ready",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "counter": undefined,
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "name_type_index": undefined,
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "running",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "tags_index": undefined,
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport handles individual test suites being run 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "counter": undefined,
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "ready",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "name_type_index": undefined,
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "running",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "tags_index": undefined,
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "ready",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "counter": undefined,
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "ready",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "name_type_index": undefined,
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "running",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "tags_index": undefined,
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport handles individual testcases being run 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "counter": undefined,
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "name_type_index": undefined,
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "running",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": undefined,
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "ready",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "ready",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "counter": undefined,
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "name_type_index": undefined,
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "running",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "tags_index": undefined,
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "ready",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport handles navigation entries being clicked 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "ready",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "ready",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "ready",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
        Object {
          "category": "multitest",
          "description": null,
          "entries": Array [
            Object {
              "category": "testsuite",
              "description": null,
              "entries": Array [
                Object {
                  "category": "testcase",
                  "description": null,
                  "entries": Array [],
                  "env_status": null,
                  "hash": 12345,
                  "logs": Array [],
                  "name": "testcaseName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                    "SuiteUID",
                  ],
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "suite_related": false,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestCaseReport",
                  "uid": "testcaseUID",
                },
                Object {
                  "category": "parametrization",
                  "description": "Parametrized testcase.",
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "logs": Array [],
                      "name": "ParametrizationName__val_1",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                        "ParametrizationUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "ParametrizationUID__val_1",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "name": "ParametrizationName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                    "SuiteUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "uid": "ParametrizationUID",
                },
              ],
              "env_status": null,
              "fix_spec_path": null,
              "hash": 12345,
              "name": "SuiteName",
              "parent_uids": Array [
                "TestplanUID",
                "MultiTestUID",
              ],
              "part": null,
              "runtime_status": "ready",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "SuiteUID",
            },
          ],
          "env_status": "STOPPED",
          "fix_spec_path": null,
          "hash": 12345,
          "name": "MultiTestName",
          "parent_uids": Array [
            "TestplanUID",
          ],
          "part": null,
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "MultiTestUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;

exports[`InteractiveReport handles tests being run 1`] = `
<div
  className=""
>
  <Toolbar
    extraButtons={
      Array [
        <ResetButton
          resetStateCbk={[Function]}
          resetting={false}
        />,
      ]
    }
    filterBoxWidth="28em"
    handleNavFilter={[Function]}
    status="unknown"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    displayTime={false}
    envCtrlCallback={[Function]}
    filter={null}
    handleColumnResizing={[Function]}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    navListWidth="28em"
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "counter": undefined,
            "description": null,
            "entries": Array [
              Object {
                "category": "testsuite",
                "description": null,
                "entries": Array [
                  Object {
                    "category": "testcase",
                    "description": null,
                    "entries": Array [],
                    "env_status": null,
                    "hash": 12345,
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                  Object {
                    "category": "parametrization",
                    "description": "Parametrized testcase.",
                    "entries": Array [
                      Object {
                        "category": "testcase",
                        "description": null,
                        "entries": Array [],
                        "logs": Array [],
                        "name": "ParametrizationName__val_1",
                        "parent_uids": Array [
                          "TestplanUID",
                          "MultiTestUID",
                          "SuiteUID",
                          "ParametrizationUID",
                        ],
                        "runtime_status": "ready",
                        "status": "unknown",
                        "status_override": null,
                        "suite_related": false,
                        "tags": Object {},
                        "timer": Object {},
                        "type": "TestCaseReport",
                        "uid": "ParametrizationUID__val_1",
                      },
                    ],
                    "env_status": null,
                    "fix_spec_path": null,
                    "name": "ParametrizationName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "part": null,
                    "runtime_status": "ready",
                    "status": "unknown",
                    "status_override": null,
                    "tags": Object {},
                    "timer": Object {},
                    "uid": "ParametrizationUID",
                  },
                ],
                "env_status": null,
                "fix_spec_path": null,
                "hash": 12345,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "runtime_status": "ready",
                "status": "unknown",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "env_status": "STOPPED",
            "fix_spec_path": null,
            "hash": 12345,
            "name": "MultiTestName",
            "name_type_index": undefined,
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "runtime_status": "running",
            "status": "unknown",
            "status_override": null,
            "tags": Object {},
            "tags_index": undefined,
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "env_status": null,
        "hash": 12345,
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "runtime_status": "ready",
        "status": "unknown",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "attachments": Object {},
          "category": "testplan",
          "entries": Array [
            Object {
              "category": "multitest",
              "counter": undefined,
              "description": null,
              "entries": Array [
                Object {
                  "category": "testsuite",
                  "description": null,
                  "entries": Array [
                    Object {
                      "category": "testcase",
                      "description": null,
                      "entries": Array [],
                      "env_status": null,
                      "hash": 12345,
                      "logs": Array [],
                      "name": "testcaseName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "suite_related": false,
                      "tags": Object {},
                      "timer": Object {},
                      "type": "TestCaseReport",
                      "uid": "testcaseUID",
                    },
                    Object {
                      "category": "parametrization",
                      "description": "Parametrized testcase.",
                      "entries": Array [
                        Object {
                          "category": "testcase",
                          "description": null,
                          "entries": Array [],
                          "logs": Array [],
                          "name": "ParametrizationName__val_1",
                          "parent_uids": Array [
                            "TestplanUID",
                            "MultiTestUID",
                            "SuiteUID",
                            "ParametrizationUID",
                          ],
                          "runtime_status": "ready",
                          "status": "unknown",
                          "status_override": null,
                          "suite_related": false,
                          "tags": Object {},
                          "timer": Object {},
                          "type": "TestCaseReport",
                          "uid": "ParametrizationUID__val_1",
                        },
                      ],
                      "env_status": null,
                      "fix_spec_path": null,
                      "name": "ParametrizationName",
                      "parent_uids": Array [
                        "TestplanUID",
                        "MultiTestUID",
                        "SuiteUID",
                      ],
                      "part": null,
                      "runtime_status": "ready",
                      "status": "unknown",
                      "status_override": null,
                      "tags": Object {},
                      "timer": Object {},
                      "uid": "ParametrizationUID",
                    },
                  ],
                  "env_status": null,
                  "fix_spec_path": null,
                  "hash": 12345,
                  "name": "SuiteName",
                  "parent_uids": Array [
                    "TestplanUID",
                    "MultiTestUID",
                  ],
                  "part": null,
                  "runtime_status": "ready",
                  "status": "unknown",
                  "status_override": null,
                  "tags": Object {},
                  "timer": Object {},
                  "type": "TestGroupReport",
                  "uid": "SuiteUID",
                },
              ],
              "env_status": "STOPPED",
              "fix_spec_path": null,
              "hash": 12345,
              "name": "MultiTestName",
              "name_type_index": undefined,
              "parent_uids": Array [
                "TestplanUID",
              ],
              "part": null,
              "runtime_status": "running",
              "status": "unknown",
              "status_override": null,
              "tags": Object {},
              "tags_index": undefined,
              "timer": Object {},
              "type": "TestGroupReport",
              "uid": "MultiTestUID",
            },
          ],
          "env_status": null,
          "hash": 12345,
          "meta": Object {},
          "name": "TestplanName",
          "parent_uids": Array [],
          "runtime_status": "ready",
          "status": "unknown",
          "status_override": null,
          "tags_index": Object {},
          "timer": Object {},
          "type": "TestGroupReport",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left="28em"
    message="Please select an entry."
  />
</div>
`;
